Hopefully fixed padding on mobile

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ ul#menu li a
   float: left; 
   height: 20px;
   text-decoration: none; 
-  padding: 9px 25px 10px 0px;
+  padding: 9px 25px 5px 0px;
   text-align: left;
   color: #FFF;
   border: none;} 
